tests/build/fail/widget/capture_only_in_mixin.stderr
error: capture-only properties cannot be declared in mix-ins
 --> $DIR/capture_only_in_mixin.rs:8:9
  |
8 |         foo { impl IntoVar<bool> }
  |         ^^^

error: capture-only properties cannot be declared in mix-ins
  --> $DIR/capture_only_in_mixin.rs:16:9
   |
16 |         foo { bool }
   |         ^^^

error: property `bar` is capture-only, only normal properties are allowed in mix-ins
  --> $DIR/capture_only_in_mixin.rs:25:16
   |
25 |         super::bar
   |                ^^^
